--- a/ansible/roles/web/templates/index.php.j2
+++ b/ansible/roles/web/templates/index.php.j2
@@ -1,5 +1,5 @@
 <?php
-$servername = {{ groups.tag_Name_db[0] }};
+$servername = {{ hostvars[['db'][0]['ansible_host'] }};
 $username = {{ db_username }};
 $password = {{ db_password }};
 // Create connection
@@ -8,5 +8,5 @@ $conn = new mysqli($servername, $username, $password);
 if ($conn->connect_error) {
     die("Unfortunately connection failed: " . $conn->connect_error);
 }
-echo "Connected successfully";
+echo "Yay! Connected successfully";
 ?>
