--- a/ansible/roles/web/templates/index.php.j2
+++ b/ansible/roles/web/templates/index.php.j2
@@ -1,7 +1,7 @@
 <?php
-$servername = {{ hostvars[['db'][0]]['ansible_fqdn'] }};
-$username = {{ db_username }};
-$password = {{ db_password }};
+$servername = "{{ hostvars[['db'][0]]['ansible_fqdn'] }}";
+$username = "{{ db_username }}";
+$password = "{{ db_password }}";
 // Create connection
 $conn = new mysqli($servername, $username, $password);
 // Check connection
