--- a/ansible/roles/web/templates/index.php.j2
+++ b/ansible/roles/web/templates/index.php.j2
@@ -1,5 +1,5 @@
 <?php
-$servername = "{{ hostvars[['db'][0]]['ansible_fqdn'] }}";
+$servername = "{{ db_name }}";
 $username = "{{ db_username }}";
 $password = "{{ db_password }}";
 // Create connection
